# spdlog_example

./: .gitignore  CMakeLists.txt  spdlog_example.cpp  use_vcpkg.cmake
